tests/rosetta/out/Smalltalk/binary-digits.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:50:28Z
"
| bits toBin x |
toBin := [:n | ((n = 0)) ifTrue: [
  '0'
] .
bits := ''.
x := n.
[(x > 0)] whileTrue: [
  bits := (((x % 2) asString) + bits).
  x := (x / 2) asInteger.
]
.
bits ].
0 to: 16 do: [:i |
  Transcript show: (toBin value: i) printString; cr.
]
.
